# psi-mod-validator

./: .gitignore  README.md  pyproject.toml  validation.md
.github/workflows/: ci.yml  release.yml
src/psimod_validator/: __init__.py  __main__.py  _composition.py  _output.py  _rdkit_utils.py  _term_data.py  fixer.py  models.py  validator.py
src/psimod_validator/_rules/: __init__.py  backbone.py  base.py  charge.py  mass.py  smiles.py  structure.py  xref.py
tests/: __init__.py  conftest.py  test_basic.py  test_fixer.py  test_output.py  test_rdkit_utils.py  test_rules.py  test_rules_mass.py  test_term_data.py  test_validator.py
tests/test_utils/: test_composition.py
